<resources>
    <string name="localAppName">To be overwritten w/localAppName as set in Earth.java</string>
    <string name="langsAndCountry">To be overwritten with name of lang (in lang) then inside parentheses: lang name in Eng plus country</string>
    <string name="audioAndPhoto">To be overwritten with audio and photo credits</string>
    <string name="audioAndPhoto2">To be overwritten with audio and photo credits (lang 2)</string>
    <string name="privacyPolicy">To be overwritten with privacy policy</string>
    <string name="email">To be overwritten with email</string>
    <string name="alphaTilesVersionInfo">To be overwritten with Alpha Tiles name + app color (the model) + the version info</string>
    <string name="home">Home</string>
    <string name="alphaTilesLogo">Alpha Tiles Logo</string>
    <string name="tracker1of12">Tracker 1 of 12</string>
    <string name="tracker2of12">Tracker 2 of 12</string>
    <string name="tracker3of12">Tracker 3 of 12</string>
    <string name="tracker4of12">Tracker 4 of 12</string>
    <string name="tracker5of12">Tracker 5 of 12</string>
    <string name="tracker6of12">Tracker 6 of 12</string>
    <string name="tracker7of12">Tracker 7 of 12</string>
    <string name="tracker8of12">Tracker 8 of 12</string>
    <string name="tracker9of12">Tracker 9 of 12</string>
    <string name="tracker10of12">Tracker 10 of 12</string>
    <string name="tracker11of12">Tracker 11 of 12</string>
    <string name="tracker12of12">Tracker 12 of 12</string>
    <string name="activeWordPicture">Picture of Active Word</string>
    <string name="boxToBuildTargetWordIn">Build Word Here</string>
    <string name="backspace">Backspace</string>
    <string name="keyboard01">01</string>
    <string name="keyboard02">02</string>
    <string name="keyboard03">03</string>
    <string name="keyboard04">04</string>
    <string name="keyboard05">05</string>
    <string name="keyboard06">06</string>
    <string name="keyboard07">07</string>
    <string name="keyboard08">08</string>
    <string name="keyboard09">09</string>
    <string name="keyboard10">10</string>
    <string name="keyboard11">11</string>
    <string name="keyboard12">12</string>
    <string name="keyboard13">13</string>
    <string name="keyboard14">14</string>
    <string name="keyboard15">15</string>
    <string name="keyboard16">16</string>
    <string name="keyboard17">17</string>
    <string name="keyboard18">18</string>
    <string name="keyboard19">19</string>
    <string name="keyboard20">20</string>
    <string name="keyboard21">21</string>
    <string name="keyboard22">22</string>
    <string name="keyboard23">23</string>
    <string name="keyboard24">24</string>
    <string name="keyboard25">25</string>
    <string name="keyboard26">26</string>
    <string name="keyboard27">27</string>
    <string name="keyboard28">28</string>
    <string name="keyboard29">29</string>
    <string name="keyboard30">30</string>
    <string name="keyboard31">31</string>
    <string name="keyboard32">32</string>
    <string name="keyboard33">33</string>
    <string name="keyboard34">34</string>
    <string name="keyboard35">35</string>
    <string name="pointsImage">Points Background</string>
    <string name="pointsScored">9999</string>
    <string name="playerAvatar">Change Players</string>
    <string name="clickLogoGoToAbout">About This App</string>
    <string name="playAgain">Play Again</string>
    <string name="playAudioInstructions">PlayAudioInstructions</string>
    <string name="celebrate">Great job! You found correct answers to 12 questions on this game!</string>
    <string name="gametile01">01</string>
    <string name="gametile02">02</string>
    <string name="gametile03">03</string>
    <string name="gametile04">04</string>
    <string name="gametile05">05</string>
    <string name="gametile06">06</string>
    <string name="gametile07">07</string>
    <string name="gametile08">08</string>
    <string name="gametile09">09</string>
    <string name="gametile10">10</string>
    <string name="gametile11">11</string>
    <string name="gametile12">12</string>
    <string name="gametile13">13</string>
    <string name="gametile14">14</string>
    <string name="gametile15">15</string>
    <string name="gametile16">16</string>
    <string name="gametile17">17</string>
    <string name="gametile18">18</string>
    <string name="gametile19">19</string>
    <string name="gametile20">20</string>
    <string name="gametile21">21</string>
    <string name="gametile22">22</string>
    <string name="gametile23">23</string>
    <string name="gametile24">24</string>
    <string name="gametile25">25</string>
    <string name="gametile26">26</string>
    <string name="gametile27">27</string>
    <string name="gametile28">28</string>
    <string name="gametile29">29</string>
    <string name="gametile30">30</string>
    <string name="gametile31">31</string>
    <string name="gametile32">32</string>
    <string name="gametile33">33</string>
    <string name="gametile34">34</string>
    <string name="gametile35">35</string>
    <string name="gametile36">36</string>
    <string name="gametile37">37</string>
    <string name="gametile38">38</string>
    <string name="gametile39">39</string>
    <string name="gametile40">40</string>
    <string name="gametile41">41</string>
    <string name="gametile42">42</string>
    <string name="gametile43">43</string>
    <string name="gametile44">44</string>
    <string name="gametile45">45</string>
    <string name="gametile46">46</string>
    <string name="gametile47">47</string>
    <string name="gametile48">48</string>
    <string name="gametile49">49</string>
    <string name="gametile50">50</string>
    <string name="gametile51">51</string>
    <string name="gametile52">52</string>
    <string name="gametile53">53</string>
    <string name="gametile54">54</string>
    <string name="gametile55">55</string>
    <string name="gametile56">56</string>
    <string name="gametile57">57</string>
    <string name="gametile58">58</string>
    <string name="gametile59">59</string>
    <string name="gametile60">60</string>
    <string name="gametile61">61</string>
    <string name="gametile62">62</string>
    <string name="gametile63">63</string>
    <string name="memoryCard01">Memory Card 01</string>
    <string name="memoryCard02">Memory Card 02</string>
    <string name="memoryCard03">Memory Card 03</string>
    <string name="memoryCard04">Memory Card 04</string>
    <string name="memoryCard05">Memory Card 05</string>
    <string name="memoryCard06">Memory Card 06</string>
    <string name="memoryCard07">Memory Card 07</string>
    <string name="memoryCard08">Memory Card 08</string>
    <string name="memoryCard09">Memory Card 09</string>
    <string name="memoryCard10">Memory Card 10</string>
    <string name="memoryCard11">Memory Card 11</string>
    <string name="memoryCard12">Memory Card 12</string>
    <string name="memoryCard13">Memory Card 13</string>
    <string name="memoryCard14">Memory Card 14</string>
    <string name="memoryCard15">Memory Card 15</string>
    <string name="memoryCard16">Memory Card 16</string>
    <string name="memoryCard17">Memory Card 17</string>
    <string name="memoryCard18">Memory Card 18</string>
    <string name="memoryCard19">Memory Card 19</string>
    <string name="memoryCard20">Memory Card 20</string>
    <string name="wordChoice01">Word Choice 1</string>
    <string name="wordChoice02">Word Choice 2</string>
    <string name="wordChoice03">Word Choice 3</string>
    <string name="wordChoice04">Word Choice 4</string>
    <string name="gameTileInFocus">a</string>
    <string name="goBackward">Go To Previous</string>
    <string name="goForward">Go To Next</string>
    <string name="seeMoreOfSameGameTile">See More Words Starting With This Game Tile</string>
    <string name="countWordsBeginningWithThisGameTile">1</string>
    <string name="activeWordText">Word In Focus</string>
    <string name="door001">Door 001</string>
    <string name="door002">Door 002</string>
    <string name="door003">Door 003</string>
    <string name="door004">Door 004</string>
    <string name="door005">Door 005</string>
    <string name="door006">Door 006</string>
    <string name="door007">Door 007</string>
    <string name="door008">Door 008</string>
    <string name="door009">Door 009</string>
    <string name="door010">Door 010</string>
    <string name="door011">Door 011</string>
    <string name="door012">Door 012</string>
    <string name="door013">Door 013</string>
    <string name="door014">Door 014</string>
    <string name="door015">Door 015</string>
    <string name="door016">Door 016</string>
    <string name="door017">Door 017</string>
    <string name="door018">Door 018</string>
    <string name="door019">Door 019</string>
    <string name="door020">Door 020</string>
    <string name="door021">Door 021</string>
    <string name="door022">Door 022</string>
    <string name="door023">Door 023</string>
    <string name="avatarIcon01">Player 01 Avatar Icon</string>
    <string name="avatarIcon02">Player 02 Avatar Icon</string>
    <string name="avatarIcon03">Player 03 Avatar Icon</string>
    <string name="avatarIcon04">Player 04 Avatar Icon</string>
    <string name="avatarIcon05">Player 05 Avatar Icon</string>
    <string name="avatarIcon06">Player 06 Avatar Icon</string>
    <string name="avatarIcon07">Player 07 Avatar Icon</string>
    <string name="avatarIcon08">Player 08 Avatar Icon</string>
    <string name="avatarIcon09">Player 09 Avatar Icon</string>
    <string name="avatarIcon10">Player 10 Avatar Icon</string>
    <string name="avatarIcon11">Player 11 Avatar Icon</string>
    <string name="avatarIcon12">Player 12 Avatar Icon</string>
    <string name="playerName01">1</string>
    <string name="playerName02">2</string>
    <string name="playerName03">3</string>
    <string name="playerName04">4</string>
    <string name="playerName05">5</string>
    <string name="playerName06">6</string>
    <string name="playerName07">7</string>
    <string name="playerName08">8</string>
    <string name="playerName09">9</string>
    <string name="playerName10">10</string>
    <string name="playerName11">11</string>
    <string name="playerName12">12</string>
    <string name="gameTile1a">Game Tile 1A</string>
    <string name="gameTile1b">Game Tile 1B</string>
    <string name="gameTile2a">Game Tile 2A</string>
    <string name="gameTile2b">Game Tile 2B</string>
    <string name="gameTile3a">Game Tile 3A</string>
    <string name="gameTile3b">Game Tile 3B</string>
    <string name="gameTile4a">Game Tile 4A</string>
    <string name="gameTile4b">Game Tile 4B</string>
    <string name="gameTile5a">Game Tile 5A</string>
    <string name="gameTile5b">Game Tile 5B</string>
    <string name="gameTile6a">Game Tile 6A</string>
    <string name="gameTile6b">Game Tile 6B</string>
    <string name="gameTile7a">Game Tile 7A</string>
    <string name="gameTile7b">Game Tile 7B</string>
    <string name="gameTile8a">Game Tile 8A</string>
    <string name="gameTile8b">Game Tile 8B</string>
    <string name="gameTile9a">Game Tile 9A</string>
    <string name="gameTile9b">Game Tile 9B</string>
    <string name="resourcePromo">Other Resources In This Language</string>
    <string name="resourceText">A Resource In This Language</string>
    <string name="wordImage01">Word Image 1</string>
    <string name="wordImage02">Word Image 2</string>
    <string name="wordImage03">Word Image 3</string>
    <string name="wordImage04">Word Image 4</string>
    <string name="wordImage05">Word Image 5</string>
    <string name="wordImage06">Word Image 6</string>
    <string name="wordImage07">Word Image 7</string>
    <string name="wordImage08">Word Image 8</string>
    <string name="wordImage09">Word Image 9</string>
    <string name="wordImage10">Word Image 10</string>
    <string name="wordImage11">Word Image 11</string>
    <string name="wordImage12">Word Image 12</string>
</resources>