<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Japan">

    <ImageView
        android:id="@+id/tracker01"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker1of12"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker02"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker2of12"
        android:tag="2"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker03"
        app:layout_constraintStart_toEndOf="@+id/tracker01"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker03"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker3of12"
        android:tag="3"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker04"
        app:layout_constraintStart_toEndOf="@+id/tracker02"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker04"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker4of12"
        android:tag="4"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker05"
        app:layout_constraintStart_toEndOf="@+id/tracker03"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker05"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker5of12"
        android:tag="5"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker06"
        app:layout_constraintStart_toEndOf="@+id/tracker04"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker06"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker6of12"
        android:tag="6"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker07"
        app:layout_constraintStart_toEndOf="@+id/tracker05"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker07"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker7of12"
        android:tag="7"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker08"
        app:layout_constraintStart_toEndOf="@+id/tracker06"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker08"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker8of12"
        android:tag="8"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker09"
        app:layout_constraintStart_toEndOf="@+id/tracker07"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker09"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker9of12"
        android:tag="9"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker10"
        app:layout_constraintStart_toEndOf="@+id/tracker08"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker10of12"
        android:tag="10"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker11"
        app:layout_constraintStart_toEndOf="@+id/tracker09"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker11of12"
        android:tag="11"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker12"
        app:layout_constraintStart_toEndOf="@+id/tracker10"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker12of12"
        android:tag="12"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tracker11"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/pointsImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHSys2"
        app:layout_constraintEnd_toStartOf="@+id/gamesHomeImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHSys1"
        android:contentDescription="@string/pointsImage"
        app:srcCompat="@drawable/zz_pointsscoredthisgame" />

    <TextView
        android:id="@+id/pointsTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/pointsScored"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/pointsImage"
        app:layout_constraintEnd_toEndOf="@+id/pointsImage"
        app:layout_constraintStart_toStartOf="@+id/pointsImage"
        app:layout_constraintTop_toTopOf="@+id/pointsImage" />

    <ImageView
        android:id="@+id/gamesHomeImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="goBackToEarth"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHSys2"
        app:layout_constraintEnd_toStartOf="@+id/instructions"
        app:layout_constraintStart_toEndOf="@+id/pointsImage"
        app:layout_constraintTop_toTopOf="@+id/guidelineHSys1"
        android:contentDescription="@string/playerAvatar"
        app:srcCompat="@drawable/zz_games_home" />

    <ImageView
        android:id="@+id/instructions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="playAudioInstructions"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHSys2"
        app:layout_constraintEnd_toEndOf="@+id/repeatImage"
        app:layout_constraintStart_toEndOf="@+id/gamesHomeImage"
        app:layout_constraintTop_toTopOf="@+id/guidelineHSys1"
        android:contentDescription="@string/playAgain"
        android:rotationY="0"
        app:srcCompat="@drawable/zz_instructions" />

    <ImageView
        android:id="@+id/repeatImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="repeatGame"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHSys2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/instructions"
        app:layout_constraintTop_toTopOf="@+id/guidelineHSys1"
        android:contentDescription="@string/playAgain"
        android:rotationY="0"
        app:srcCompat="@drawable/zz_forward" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHneg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHSys1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHSys2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.99" />

    <TextView
        android:id="@+id/word"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineH0" />


</androidx.constraintlayout.widget.ConstraintLayout>