<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Australia">

    <ImageView
        android:id="@+id/tracker01"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker1of12"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker02"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker2of12"
        android:tag="2"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker03"
        app:layout_constraintStart_toEndOf="@+id/tracker01"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker03"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker3of12"
        android:tag="3"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker04"
        app:layout_constraintStart_toEndOf="@+id/tracker02"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker04"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker4of12"
        android:tag="4"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker05"
        app:layout_constraintStart_toEndOf="@+id/tracker03"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker05"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker5of12"
        android:tag="5"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker06"
        app:layout_constraintStart_toEndOf="@+id/tracker04"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker06"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker6of12"
        android:tag="6"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker07"
        app:layout_constraintStart_toEndOf="@+id/tracker05"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker07"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker7of12"
        android:tag="7"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker08"
        app:layout_constraintStart_toEndOf="@+id/tracker06"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker08"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker8of12"
        android:tag="8"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker09"
        app:layout_constraintStart_toEndOf="@+id/tracker07"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker09"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker9of12"
        android:tag="9"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker10"
        app:layout_constraintStart_toEndOf="@+id/tracker08"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker10of12"
        android:tag="10"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker11"
        app:layout_constraintStart_toEndOf="@+id/tracker09"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker11of12"
        android:tag="11"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toStartOf="@+id/tracker12"
        app:layout_constraintStart_toEndOf="@+id/tracker10"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <ImageView
        android:id="@+id/tracker12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/tracker12of12"
        android:tag="12"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tracker11"
        app:layout_constraintTop_toTopOf="@+id/guidelineHneg1"
        app:srcCompat="@drawable/zz_incomplete" />

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="409dp"
        android:layout_height="450dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineH1">

    </RelativeLayout>

    <TextView
        android:id="@+id/wordPreview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#C5C5C5"
        android:padding="5sp"
        android:text="wrench"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/submit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl" />

    <LinearLayout
        android:id="@+id/replacementPopup"
        android:layout_width="0dip"
        android:layout_height="75dp"
        android:background="#D8D8D8"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordPreview"></LinearLayout>

    <ImageView
        android:id="@+id/pointsImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/pointsImage"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHSys2"
        app:layout_constraintEnd_toStartOf="@+id/gamesHomeImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHSys1"
        app:srcCompat="@drawable/zz_pointsscoredthisgame" />

    <TextView
        android:id="@+id/pointsTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:maxLines="1"
        android:padding="7dp"
        android:text="@string/pointsScored"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="25sp"
        app:autoSizeMinTextSize="5sp"
        app:autoSizeStepGranularity="2sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/pointsImage"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="@+id/pointsImage"
        app:layout_constraintStart_toStartOf="@+id/pointsImage"
        app:layout_constraintTop_toTopOf="@+id/pointsImage" />

    <ImageView
        android:id="@+id/gamesHomeImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/playerAvatar"
        android:onClick="goBackToEarth"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHSys2"
        app:layout_constraintEnd_toStartOf="@+id/instructions"
        app:layout_constraintStart_toEndOf="@+id/pointsImage"
        app:layout_constraintTop_toTopOf="@+id/guidelineHSys1"
        app:srcCompat="@drawable/zz_games_home" />

    <ImageView
        android:id="@+id/instructions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/playAgain"
        android:onClick="playAudioInstructions"
        android:rotationY="0"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHSys2"
        app:layout_constraintEnd_toEndOf="@+id/repeatImage"
        app:layout_constraintStart_toEndOf="@+id/gamesHomeImage"
        app:layout_constraintTop_toTopOf="@+id/guidelineHSys1"
        app:srcCompat="@drawable/zz_instructions" />

    <ImageView
        android:id="@+id/repeatImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/playAgain"
        android:onClick="repeatGame"
        android:rotationY="0"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHSys2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/instructions"
        app:layout_constraintTop_toTopOf="@+id/guidelineHSys1"
        app:srcCompat="@drawable/zz_forward_inactive" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHneg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHSys1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.89" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHSys2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <ImageView
        android:id="@+id/submit"
        android:layout_width="56dp"
        android:layout_height="51dp"
        android:layout_marginStart="44dp"
        app:layout_constraintEnd_toStartOf="@+id/deleteText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/wordPreview"
        app:layout_constraintTop_toBottomOf="@+id/rl"
        app:srcCompat="@drawable/zz_complete" />

    <ImageView
        android:id="@+id/deleteText"
        android:layout_width="59dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/submit"
        app:layout_constraintTop_toBottomOf="@+id/rl"
        app:srcCompat="@drawable/zz_deletetext" />

</androidx.constraintlayout.widget.ConstraintLayout>